correction page accueil changement couleur contrast

--- a/style.css
+++ b/style.css
@@ -31,6 +31,13 @@ body {
     font-size: 1.4rem;
 }
 
+.title-h2{
+    color: rgb(31, 31, 31)!important;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    font-weight: 600;
+}
+
 .color-text{
    color:#FCCF69!important;
 }
@@ -727,10 +734,15 @@ p {
     font-weight: 700;
 }
 
-.social, .twitter, .facebook, .dribbble, .instagram {
+.social{
     max-width: 400px;
     margin: auto auto auto auto;
 }
+
+footer .col-sm-3 {
+    margin-bottom: 15px;
+}
+
 
 h2 {
     font-size: 22px;
@@ -801,13 +813,13 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #d1622f;
+    background-color: #85373E;
 }
 
 
 
 .btn-atomic-tangerine {
-    background: #d1622f;
+    background: #85373E;
     color: #FFFFFF!important;
 }
 
